# queryadvisor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  compose.yaml  machine-shop.sh  pyproject.toml
.claude/: agency-config.json  agent-teams.json  git-authors.json  settings.json
.claude/commands/: address-issue.md  prime.md  refine-issue.md  review-pr.md  update-agency.md
app/: config.py  exceptions.py  main.py  models.py
app/metadata/: collector.py
app/parser/: extractor.py  temp_tables.py
app/rules/: engine.py  indexing.py  joins.py  predicates.py  style.py
app/scoring/: scorer.py
app/templates/: base.html  index.html
app/templates/partials/: annotated_sql.html  findings_list.html  report_card.html  results.html
docs/: README.md  features-template.md  project_context.md
docs/features/: README.md
docs/features-archive/: README.md
docs/guides/: local-dev-setup.md
docs/superpowers/plans/: 2026-03-31-queryadvisor-implementation.md  2026-04-01-17-sanitize-pyodbc-exceptions.md  (+5 more)
scripts/: seed_db.py
scripts/code_review/: README.md  bundle_review.py
scripts/validation/: validate.sh
static/css/: style.css
tests/: test_config.py  test_infra.py  test_seed.py
tests/test_api/: test_endpoints.py
tests/test_browser/: conftest.py  test_analyze_flow.py  test_load_dotenv.py  test_smoke.py
tests/test_metadata/: test_collector.py
tests/test_parser/: test_extractor.py
tests/test_rules/: test_engine.py  test_indexing.py  test_joins.py  test_predicates.py  test_style.py
tests/test_scoring/: test_scorer.py
(+1 files in other folders)
